2011-03-23:  Greatly improved API documentation.

             Thanks to Christophe Troestler <Christophe.Troestler@umons.ac.be>
             for contributing this large patch!

2010-11-21:  Added new function:

               * sbgv

             Thanks to Christophe Troestler <Christophe.Troestler@umons.ac.be>
             for contributing this function!

2009-10-03:  Minor API change.

             trmm and trsm now have a similar API wrt. variable labeling.

2009-09-21:  Added new functions:

               * ormqr
               * trsm
               * Mat.scal_rows

2009-09-16:  Added new functions:

               * sygv

             Thanks to Christophe Troestler <Christophe.Troestler@umons.ac.be>
             for contributing sygv!

               * orgqr
               * lauum

             Added example for QR-factorization.

2009-09-09:  Fixed a few performance bugs.

             Some matrix and vector types were polymorphic, thus
             leading to much worse element access speed.

             Improved compiler selection in Makefile.

             Improved some matrix operations.

             Added new function:

               * Mat.transpose_copy

2009-06-13:  Added new function:

               * Mat.as_vec

2009-06-12:  Added new function:

               * tbtrs  (all numbers)

             Thanks to Sam Ehrlichman <sehrlichman@janestreet.com>
             for contributing the patch!

2009-06-07:  Added workaround for OCaml performance bug wrt. bigarray
             access.  This should make OCaml code perform much faster when
             accessing or modifying bigarrays directly.

             Changed API for Mat.scal_cols by swapping matrix and vector
             argument.

2009-06-01:  New vector functions:

               * Vec.sqrt  (compute square roots of a vector)
               * Vec.sqr   (compute squares of a vector)

2009-05-30:  Major overhaul:

             Fixed too liberal transpose parameters in several